--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ overview: true
 		<a class="b-polygon b-polygon_hexagon" href="/">
 	    	<span class="b-polygon-part">
 	        	<span class="b-polygon-part b-polygon-part_content">
-					<img src="/images/me-and-dog.jpg" alt="Sam Griffin with his dog" />
+					<img src="{{site.base_url}}/images/me-and-dog.jpg" alt="Sam Griffin with his dog" />
 				</span>
 			</span>
 		</a>
@@ -31,7 +31,7 @@ overview: true
 			<img src="http://placehold.it/400x200&text={{post.categories}}" alt="{{post.categories}}" />
 			<figcaption>
 				<p>{{ post.abstract }}</p> <!-- TODO: Truncation -->
-				<a href="{{ post.url }}">Read More</a>
+				<a href="{{site.base_url}}/{{ post.url }}">Read More</a>
 			</figcaption>
 		</figure>
 	</section>
