moving back to relative paths

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ title: Homepage
 		<a class="b-polygon b-polygon_hexagon" href="/">
 	    	<span class="b-polygon-part">
 	        	<span class="b-polygon-part b-polygon-part_content">
-					<img src="{{site.base_url}}/images/me-and-dog.jpg" alt="Sam Griffin with his dog" />
+					<img src="/images/me-and-dog.jpg" alt="Sam Griffin with his dog" />
 				</span>
 			</span>
 		</a>
@@ -32,7 +32,7 @@ title: Homepage
 			<img src="http://placehold.it/400x200&text={{post.tags}}" alt="{{post.tags}}" />
 			<figcaption>
 				<p>{{ post.abstract }}</p> <!-- TODO: Truncation -->
-				<a href="{{site.base_url}}{{ post.url }}">Read More</a>
+				<a href="{{ post.url }}">Read More</a>
 			</figcaption>
 		</figure>
 	</section>
