--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@ title: Homepage
 		<h4>{{ post.subtitle }}</h4>
 		{% endif %}
 		<figure>
-			<img src="http://placehold.it/400x200&text={{post.tags}}" alt="{{post.tags}}" />
+			<img src="https://placehold.it/400x200&text={{post.tags}}" alt="{{post.tags}}" />
 			<figcaption>
 				<p>{{ post.abstract }}</p> <!-- TODO: Truncation -->
 				<a href="{{ post.url }}">Read More</a>
