--- a/wishlist/index.html
+++ b/wishlist/index.html
@@ -4,3 +4,24 @@ overview: true
 title: Wishlist
 ---
 
+<div class="row">
+	<div class="col s12 center-align">
+		<h1 class="page-title">Wishlist</h1>
+	</div>
+
+	<div class="wishlist" class="col s12">
+		<ul>
+			<li>Feeling Old Gifts</li>
+			<li><a href="https://bombas.com/products/mens-merino-tie-dye-gift-box?variant=tie-dye-mix&size=l">Men's Merino Tie Dye Gift Box</a></li> 
+			<li><a href="https://www.theragun.com/us/en-us/prime-us.html">Theragun</a></li>
+			<li>Food Toys</li>
+			<li><a href="https://smile.amazon.com/COSORI-Electric-Reminder-Touchscreen-Certified/dp/B07GJBBGHG/ref=sr_1_4?dchild=1&keywords=air+fryer&qid=1607918443&sr=8-4">Air Fryer</a></li>
+			<li>Kitchen Tools</li>
+			<li><a href="https://www.amazon.com/gp/product/B00004VVHI/">Kitchen Shears</a></li>
+			<li><a href="https://www.amazon.com/Victorinox-Swiss-Army-Cutlery-Slicing/dp/B0000CFDB9/">Slicing Knife</a></li>
+			<li><a href="https://www.williams-sonoma.com/products/shun-premier-nakiri-knife/?sku=3743056">Shun Premier 6 1/2" Nakiri Knife</a></li>
+			<li><a href="https://kankitchen.com/product/kan-core-chef-knife-8-inch-vg-10-67-layers-damascus-ambidextrous-hammered-vg-10-blade-g10-handle/">KAN Core 8-inch Chef Knife</a></li>
+			<li><a href="https://smile.amazon.com/YOSHIKAWA-Yukihira-Saucepan-3-Quart/dp/B001BASSTI">YOSHIKAWA Yukihira Saucepan, 3 Quart</a></li>
+		</ul>
+	</div>
+</div>
