--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 ---
 layout: default
 overview: true
-title: Homepage
+title: Payments & POS Cloud API Specialist
 ---
 
 <div class="homepage row">
 	<div class="col s12 center-align">
 		<h1>Sam Griffin</h1>
-		<h2>Payments & POS Specialist</h2>
+		<h2>Payments & POS Cloud API Specialist</h2>
 	</div>
 </div>
 
