--- a/foodpics/index.html
+++ b/foodpics/index.html
@@ -41,12 +41,24 @@ title: Food Pics
 		        {
 		          src:          '/images/food/smoked-game-hen.jpg', 
 		          srct:         '/images/food/smoked-game-hen.jpg',
+		        },
+		        {
+		          src:          '/images/food/chicken-katsu.jpg', 
+		          srct:         '/images/food/chicken-katsu.jpg',
+		        },
+		        {
+		          src:          '/images/food/french-onion-soup.jpg', 
+		          srct:         '/images/food/french-onion-soup.jpg',
+		        },
+		        {
+		          src:          '/images/food/carnitas-tacos.jpg', 
+		          srct:         '/images/food/carnitas-tacos.jpg',
 		        }
 		    ],
 		  
 		  	// GALLERY AND THUMBNAIL LAYOUT
 	        thumbnailHeight: '250', thumbnailWidth: 'auto',
-	        galleryDisplayMode: 'pagination',                 // gallery pagination mode
+	        galleryDisplayMode: 'none',                 // gallery pagination mode
 	        galleryMaxRows: 3,                                // gallery with max 3 rows
 	        //gallerySorting: 'random',
 	        thumbnailAlignment: 'fillWidth',
