--- a/wishlist/index.html
+++ b/wishlist/index.html
@@ -11,10 +11,10 @@ title: Wishlist
 
 	<div class="wishlist" class="col s12">
 		<ul>
-			<li>Feeling Old Gifts</li>
-			<li><a href="https://www.theragun.com/us/en-us/prime-us.html">Theragun</a></li>
+			<li>General</li>
+			<li><a href="https://olukai.com/products/moloa-mens-leather-slippers-tobacco?variant=32925609230435">Olukai Slippers</a></li>
+			<li><a href="https://vuoriclothing.com/products/sunday-performance-jogger-black?variant=32651573821543">Sunday Performance Joggers</a></li>
 			<li>Kitchen Tools</li>
-			<li><a href="https://amzn.to/3ik7uM4">Kitchen Shears</a></li>
 			<li><a href="https://www.williams-sonoma.com/products/shun-premier-nakiri-knife/?sku=3743056">Shun Premier 6 1/2" Nakiri Knife</a></li>
 			<li><a href="https://kankitchen.com/product/kan-core-chef-knife-8-inch-vg-10-67-layers-damascus-ambidextrous-hammered-vg-10-blade-g10-handle/">KAN Core 8-inch Chef Knife</a></li>
 			<li><a href="https://amzn.to/3bMHHe3">YOSHIKAWA Yukihira Saucepan, 3 Quart</a></li>
