--- a/wishlist/index.html
+++ b/wishlist/index.html
@@ -13,7 +13,10 @@ title: Wishlist
 		<ul>
 			<li>General</li>
 			<li><a href="https://olukai.com/products/moloa-mens-leather-slippers-tobacco?variant=32925609230435">Olukai Slippers</a></li>
-			<li><a href="https://vuoriclothing.com/products/sunday-performance-jogger-black?variant=32651573821543">Sunday Performance Joggers</a></li>
+			<li><a href="https://vuoriclothing.com/products/sunday-performance-jogger-black?variant=32651573821543">Sunday Performance Joggers</a>
+			</li>
+			<li><a href="https://www.pakaapparel.com/collections/2021/products/mens-joggers?variant=32921510248532#&gid=1&pid=2">Paka Joggers</a></li>
+			<li><a href="https://www.brooksbrothers.com/Merino-Shawl-Collar-Cardigan/MS01030,default,pd.html?dwvar_MS01030_Color=GREY&contentpos=2&cgid=0224">Merino Shawl Collar Cardigan</a></li>
 			<li>Kitchen Tools</li>
 			<li><a href="https://www.williams-sonoma.com/products/shun-premier-nakiri-knife/?sku=3743056">Shun Premier 6 1/2" Nakiri Knife</a></li>
 			<li><a href="https://kankitchen.com/product/kan-core-chef-knife-8-inch-vg-10-67-layers-damascus-ambidextrous-hammered-vg-10-blade-g10-handle/">KAN Core 8-inch Chef Knife</a></li>
