--- a/wishlist/index.html
+++ b/wishlist/index.html
@@ -12,17 +12,21 @@ title: Wishlist
 	<div class="wishlist" class="col s12">
 		<ul>
 			<li>Clothing</li>
-			<li><a target="_blank" href="https://vuoriclothing.com/products/sunday-performance-jogger-black?variant=32651573821543">Sunday Performance Joggers</a>
+			<li><a target="_blank" href="https://www.marinelayer.com/collections/guys-new/products/corbet-quilted-crewneck-dark-oat-heather?variant=39892422525002">Corbet Quilted Crewneck in Dark Oat Heather</a>
 			</li>
-			<li><a target="_blank" href="https://www.pakaapparel.com/collections/2021/products/mens-joggers?variant=32921510248532">Paka Joggers</a></li>
-			<li><a target="_blank" href="https://www.brooksbrothers.com/Merino-Shawl-Collar-Cardigan/MS01030,default,pd.html?dwvar_MS01030_Color=GREY&contentpos=2&cgid=0224">Merino Shawl Collar Cardigan</a></li>
-			<li><a target="_blank" href="https://olukai.com/products/moloa-mens-leather-slippers-tobacco?variant=32925609230435">Olukai Slippers</a></li>
-			<li>Outdoor Gear</li>
-			<li><a target="_blank" href="https://smile.amazon.com/dp/B075RW57W3/?coliid=I24EULMM7PCQ5N&colid=ZJL4JDNBYM4S&psc=1&ref_=lv_ov_lig_dp_it">Giro Fixture MIPS Adult Dirt Cycling Helmet</a></li>
-			<li><a target="_blank" href="https://smile.amazon.com/dp/B07HNW1D89">Firebelly Red Osprey Syncro 12 Men's Bike Hydration Backpack</a></li>
+			<li><a target="_blank" href="https://thenormalbrand.com/products/seawool-nep-crew?variant=41924474929324">Seawool Nep Crew (Cream)</a>
+			</li>
+			<li><a target="_blank" href="https://fahertybrand.com/products/marled-cotton-cardigan-blue-navy-marl?variant=40176773529669">Marled Cotton Cardigan</a>
+			</li>
+			<li><a target="_blank" href="https://www.47brand.com/products/boston-celtics-grit-scrum-t-mens">Boston Celtics Tee</a>
+			</li>
+			<li><a target="_blank" href="https://www.adidas.com/us/adizero-ubersonic-4-tennis-shoes/GX9623.html">Adizero Ubersonic 4 Tennis Shoe (10/10.5)</a>
+			</li>
+			<li>Home Decor</li>
+			<li><a target="_blank" href="https://bigblanket.com/products/premier-plush?variant=39416486395940">Big Blanket - Premier Plush™ Blanket (Plum Heather)</a>
+			</li>
 			<li>Kitchen Tools</li>
 			<li><a target="_blank" href="https://www.williams-sonoma.com/products/shun-premier-nakiri-knife/?sku=3743056">Shun Premier 6 1/2" Nakiri Knife</a></li>
-			<li><a target="_blank" href="https://kankitchen.com/product/kan-core-chef-knife-8-inch-vg-10-67-layers-damascus-ambidextrous-hammered-vg-10-blade-g10-handle/">KAN Core 8-inch Chef Knife</a></li>
 			<li><a target="_blank" href="https://amzn.to/3bMHHe3">YOSHIKAWA Yukihira Saucepan, 3 Quart</a></li>
 		</ul>
 	</div>
