--- a/wishlist/index.html
+++ b/wishlist/index.html
@@ -18,7 +18,7 @@ title: Wishlist
 			</li>
 			<li><a target="_blank" href="https://fahertybrand.com/products/marled-cotton-cardigan-blue-navy-marl?variant=40176773529669">Marled Cotton Cardigan</a>
 			</li>
-			<li><a target="_blank" href="https://shop.lululemon.com/p/mens-trousers/Abc-Slim-5-Pocket-32/_/prod9390007?catId=usmtrousers&color=47759&page=1&pagesize=16&qtyCode=1&skuId=123031405&sz=32">ABC Slim-Fit Pant 32" Warpstreme - Smoked Spruce</a>
+			<li><a target="_blank" href="https://shop.lululemon.com/p/mens-trousers/Abc-Slim-5-Pocket-32/_/prod9390007?catId=usmtrousers&color=47759&page=1&pagesize=16&qtyCode=1&skuId=123031405&sz=32">ABC Slim-Fit Pant 32" Warpstreme - Size 32, Smoked Spruce</a>
 			</li>
 			<li><a target="_blank" href="https://www.47brand.com/products/boston-celtics-grit-scrum-t-mens">Boston Celtics Tee</a>
 			</li>
@@ -31,8 +31,8 @@ title: Wishlist
 			<li><a target="_blank" href="https://www.williams-sonoma.com/products/shun-premier-nakiri-knife/?sku=3743056">Shun Premier 6 1/2" Nakiri Knife</a></li>
 			<li><a target="_blank" href="https://amzn.to/3bMHHe3">YOSHIKAWA Yukihira Saucepan, 3 Quart</a></li>
 			<li>Snacks!</li>
-			<li><a target="_blank" href="https://smile.amazon.com/Quest-Nutrition-Tortilla-Protein-Cheese/dp/B07RWP9HW5/ref=pd_bxgy_sccl_2/130-0438785-5583121">Quest Nutrition Tortilla Style Protein Chips, Chili Lime, Baked, 1.1 Oz, Pack of 12</a></li>
-			<li><a target="_blank" href="https://smile.amazon.com/Quest-Nutrition-Protein-Chips-Cream/dp/B09WCWK8LM/">Quest Nutrition Protein Chips Variety Pack, (BBQ, Cheddar & Sour Cream, Sour Cream & Onion), High Protein, Low Carb, 1.1 Ounce (Pack of 12)</a></li>
+			<li><a target="_blank" href="https://smile.amazon.com/Quest-Nutrition-Tortilla-Protein-Cheese/dp/B07RWP9HW5/ref=pd_bxgy_sccl_2/130-0438785-5583121">Quest Nutrition Tortilla Style Protein Chips, Chili Lime</a></li>
+			<li><a target="_blank" href="https://smile.amazon.com/Quest-Nutrition-Protein-Chips-Cream/dp/B09WCWK8LM/">Quest Nutrition Protein Chips Variety Pack</a></li>
 		</ul>
 	</div>
 </div>
