--- a/wishlist/index.html
+++ b/wishlist/index.html
@@ -12,7 +12,11 @@ title: Wishlist
 	<div class="wishlist" class="col s12">
 		<ul>
 			<li>Clothing</li>
-			<li><a target="_blank" href="https://www.marinelayer.com/collections/guys-new/products/corbet-quilted-crewneck-dark-oat-heather?variant=39892422525002">Corbet Quilted Crewneck in Dark Oat Heather</a>
+			
+			<li><a target="_blank" href="https://www.birddogs.com/products/the-stephen-jobs">Bird Dog - Stephen Jobs</a>
+			</li>
+			<li><a target="_blank" href="https://www.birddogs.com/products/tiger-woulds">Bird Dog Joggers - Tiger Woulds</a>
+			<li><a target="_blank" href="https://ombraz.com/products/classics-ombraz-armless-sunglasses?variant=43556964401403">Ombraz Sunglasses</a>
 			</li>
 			<li><a target="_blank" href="https://thenormalbrand.com/products/seawool-nep-crew?variant=41924474929324">Seawool Nep Crew (Cream)</a>
 			</li>
@@ -20,17 +24,12 @@ title: Wishlist
 			</li>
 			<li><a target="_blank" href="https://www.47brand.com/products/boston-celtics-grit-scrum-t-mens">Boston Celtics Tee</a>
 			</li>
-			<li><a target="_blank" href="https://www.adidas.com/us/adizero-ubersonic-4-tennis-shoes/GX9623.html">Adizero Ubersonic 4 Tennis Shoe (10/10.5)</a>
-			</li>
 			<li>Home Decor</li>
 			<li><a target="_blank" href="https://bigblanket.com/products/premier-plush?variant=39416486395940">Big Blanket - Premier Plush™ Blanket (Plum Heather)</a>
 			</li>
 			<li>Kitchen Tools</li>
 			<li><a target="_blank" href="https://www.williams-sonoma.com/products/shun-premier-nakiri-knife/?sku=3743056">Shun Premier 6 1/2" Nakiri Knife</a></li>
 			<li><a target="_blank" href="https://amzn.to/3bMHHe3">YOSHIKAWA Yukihira Saucepan, 3 Quart</a></li>
-			<li>Snacks!</li>
-			<li><a target="_blank" href="https://smile.amazon.com/Quest-Nutrition-Tortilla-Protein-Cheese/dp/B07RWP9HW5/ref=pd_bxgy_sccl_2/130-0438785-5583121">Quest Nutrition Tortilla Style Protein Chips, Chili Lime</a></li>
-			<li><a target="_blank" href="https://smile.amazon.com/Quest-Nutrition-Protein-Chips-Cream/dp/B09WCWK8LM/">Quest Nutrition Protein Chips Variety Pack</a></li>
 		</ul>
 	</div>
 </div>
