--- a/wishlist/index.html
+++ b/wishlist/index.html
@@ -11,8 +11,10 @@ title: Wishlist
 
 	<div class="wishlist" class="col s12">
 		<ul>
+			<li>Amazon</li>
+			<li><a target="_blank" href="https://www.amazon.com/hz/wishlist/ls/ZJL4JDNBYM4S/ref=nav_wishlist_lists_1">Amazon Wishlist</a>
+			</li>
 			<li>Clothing</li>
-			
 			<li><a target="_blank" href="https://www.birddogs.com/products/the-stephen-jobs">Bird Dog - Stephen Jobs</a>
 			</li>
 			<li><a target="_blank" href="https://www.birddogs.com/products/tiger-woulds">Bird Dog Joggers - Tiger Woulds</a>
