--- a/wishlist/index.html
+++ b/wishlist/index.html
@@ -12,10 +12,11 @@ title: Wishlist
 	<div class="wishlist" class="col s12">
 		<ul>
 			<li>Clothing</li>
-			<li><a target="_blank" href="https://fahertybrand.com/products/cloud-ls-henley-ivory-heather-1?variant=39452970778693">Cloud Cotton Long-Sleeve Henley</a></li>
+			<li><a target="_blank" href="https://fahertybrand.com/products/cloud-ls-henley-ivory-heather-1?variant=39452970778693">Cloud Cotton Long-Sleeve Henley (wait for sale)</a></li>
 			<li><a target="_blank" href="https://www.birddogs.com/products/gabe-ruths">Bird Dog Joggers - M, Any color but black</a>
-			<li><a target="_blank" href="https://fahertybrand.com/products/inlet-knit-blazer-black-sky-melange?variant=40449381400645">Inlet Knit Blazer</a></li>
+			<li><a target="_blank" href="https://fahertybrand.com/products/inlet-knit-blazer-black-sky-melange?variant=40449381400645">Inlet Knit Blazer - M (wait for sale)</a></li>
 			<li><a target="_blank" href="https://vuoriclothing.com/products/ponto-performance-crew-azure-heather?queryId=null&index=null&objectId=4761818431591">Ponto Performance Crew</a></li>
+			<li><a target="_blank" href="https://vuoriclothing.com/products/ponto-performance-crew-azure-heather?queryId=null&index=null&objectId=4761818431591">Sunday Performance Joggers - M, Beryl Heather</a></li>
 			<li><a target="_blank" href="https://thenormalbrand.com/products/seawool-nep-crew?variant=41924474929324">Seawool Nep Crew (Cream)</a></li>
 			<li><a target="_blank" href="https://ombraz.com/products/classics-ombraz-armless-sunglasses?variant=43556964401403">Ombraz Sunglasses</a></li>
 			<li><a target="_blank" href="https://www.47brand.com/products/boston-celtics-grit-scrum-t-mens">Boston Celtics Tee</a></li>
