--- a/foodpics/index.html
+++ b/foodpics/index.html
@@ -56,39 +56,32 @@ title: Food Pics
 		        }
 		    ],
 		  
-		  	// GALLERY AND THUMBNAIL LAYOUT
 	        thumbnailHeight: '250', thumbnailWidth: 'auto',
-	        galleryDisplayMode: 'none',                 // gallery pagination mode
-	        galleryMaxRows: 3,                                // gallery with max 3 rows
-	        //gallerySorting: 'random',
+	        galleryDisplayMode: 'none',               
+	        galleryMaxRows: 3,                        
 	        thumbnailAlignment: 'fillWidth',
 	        thumbnailL1GutterWidth: 20,
 	        thumbnailL1GutterHeight: 20,
 	        thumbnailBorderHorizontal: 1,
 	        thumbnailBorderVertical: 1,
 
-	        // THUMBNAIL TOOLS & LABEL
 	        thumbnailL1Label: { display: true, position:'overImageOnTop', hideIcons: true, titleFontSize: '1.5em', align: 'left'},
 	        thumbnailToolbarImage :  { topLeft: 'select', bottomRight : 'featured,display,download,info,cart' },
 
-	        // DISPLAY ANIMATION
-	        thumbnailDisplayTransition: 'flipUp',       // thumbnail display animation
+	        thumbnailDisplayTransition: 'flipUp',      
 	        thumbnailDisplayTransitionDuration: 400,
 	        thumbnailDisplayInterval: 200,
 	        thumbnailDisplayOrder: 'rowByRow',
 
-	        // THUMBNAIL'S HOVER ANIMATION
 	        thumbnailHoverEffect2: 'toolsSlideUp|labelSlideDown',
 	        touchAnimation: true,
 	        touchAutoOpenDelay: -1,
 
-	        // GALLERY THEME
 	        galleryTheme : { 
 	          thumbnail: { titleShadow : 'none', descriptionShadow : 'none', titleColor: '#fff', borderColor: '#fff' },
 	          navigationPagination :  { background: '#3C4B5B', color: '#fff', colorHover: '#aaa', borderRadius: '4px' },
 	        },
 	          
-	        // DEEP LINKING
 	        locationHash: true
 		});
 	});
