--- a/wishlist/index.html
+++ b/wishlist/index.html
@@ -11,25 +11,43 @@ title: Wishlist
 
 	<div class="wishlist" class="col s12">
 		<ul>
-			<li>Clothing</li>
-			<li><a target="_blank" href="https://fahertybrand.com/products/cloud-ls-henley-ivory-heather-1?variant=39452970778693">Cloud Cotton Long-Sleeve Henley (wait for sale)</a></li>
-			<li><a target="_blank" href="https://www.birddogs.com/products/gabe-ruths">Bird Dog Joggers - M, Any color but black</a>
-			<li><a target="_blank" href="https://fahertybrand.com/products/inlet-knit-blazer-black-sky-melange?variant=40449381400645">Inlet Knit Blazer - M (wait for sale)</a></li>
-			<li><a target="_blank" href="https://vuoriclothing.com/products/ponto-performance-crew-azure-heather?queryId=null&index=null&objectId=4761818431591">Ponto Performance Crew</a></li>
-			<li><a target="_blank" href="https://vuoriclothing.com/products/ponto-performance-crew-azure-heather?queryId=null&index=null&objectId=4761818431591">Sunday Performance Joggers - M, Beryl Heather</a></li>
-			<li><a target="_blank" href="https://thenormalbrand.com/products/seawool-nep-crew?variant=41924474929324">Seawool Nep Crew (Cream)</a></li>
-			<li><a target="_blank" href="https://ombraz.com/products/classics-ombraz-armless-sunglasses?variant=43556964401403">Ombraz Sunglasses</a></li>
-			<li><a target="_blank" href="https://www.47brand.com/products/boston-celtics-grit-scrum-t-mens">Boston Celtics Tee</a></li>
-			<li>Home Decor</li>
-			<li><a target="_blank" href="https://bigblanket.com/products/premier-plush?variant=39416486395940">Big Blanket - Premier Plush™ Blanket (Plum Heather)</a></li>
-			<li>Shoes</li>
-			<li><a target="_blank" href="https://nisolo.com/collections/mens-oxfords/products/mens-leather-slip-on-tobacco">Alejandro Slip On - Tobacco, 10</a></li>
-			<li>Kitchen Tools</li>
-			<li><a target="_blank" href="https://www.amazon.com/dp/B07L8YPYQK/">Sondiko Butane Torch S400</a></li>
-			<li><a target="_blank" href="https://www.amazon.com/dp/B08FT6VM7D/">Navaris Breading Trays Set - 3 Medium Stainless Steel Pans</a></li>
-			<li><a target="_blank" href="https://www.amazon.com/dp/B08BR9HBZ3/">Rubbermaid Brilliance Glass Storage Set of 9 Food Containers with Lids (18 Pieces Total), Set, Assorted, Clear</a></li>
 			<li>Amazon</li>
-			<li><a target="_blank" href="https://www.amazon.com/hz/wishlist/ls/ZJL4JDNBYM4S/ref=nav_wishlist_lists_1">Amazon Wishlist</a></li>
+			<li>
+				<a target="_blank" href="https://www.amazon.com/hz/wishlist/ls/ZJL4JDNBYM4S/ref=nav_wishlist_lists_1">Amazon Wishlist</a>
+			</li>
+
+			<li>Clothing</li>
+			<li>
+				<a target="_blank" href="https://vuoriclothing.com/products/ponto-performance-crew-azure-heather?queryId=null&index=null&objectId=4761818431591">Sunday Performance Joggers - M, Beryl Heather</a>
+			</li>
+			<li>
+				<a target="_blank" href="https://www.birddogs.com/products/gabe-ruths">Bird Dog Joggers - M, Any color but black</a>
+			</li>
+			<li>
+				<a target="_blank" href="https://vuoriclothing.com/products/ponto-performance-crew-azure-heather?queryId=null&index=null&objectId=4761818431591">Ponto Performance Crew</a>
+			</li>
+			<li>
+				<a target="_blank" href="https://ombraz.com/products/classics-ombraz-armless-sunglasses?variant=43556964401403">Ombraz Sunglasses</a>
+			</li>
+			<li>
+				<a target="_blank" href="https://www.47brand.com/products/boston-celtics-grit-scrum-t-mens">Boston Celtics Tee</a>
+			</li>
+			<li>
+				<a target="_blank" href="https://fahertybrand.com/products/cloud-ls-henley-ivory-heather-1?variant=39452970778693">Cloud Cotton Long-Sleeve Henley (wait for sale)</a>
+			</li>
+			<li>
+				<a target="_blank" href="https://fahertybrand.com/products/inlet-knit-blazer-black-sky-melange?variant=40449381400645">Inlet Knit Blazer - M (wait for sale)</a>
+			</li>
+			
+			<li>Shoes</li>
+			<li>
+				<a target="_blank" href="https://nisolo.com/collections/mens-oxfords/products/mens-leather-slip-on-tobacco">Alejandro Slip On - Tobacco, 10</a>
+			</li>
+			
+			<li>Expensive</li>
+			<li>
+				<a target="_blank" href="https://www.solostove.com/en-us/p/station?sku=STN-BLK">Solo Stove Station</a>
+			</li>
 		</ul>
 	</div>
 </div>
