--- a/wishlist/index.html
+++ b/wishlist/index.html
@@ -18,28 +18,23 @@ title: Wishlist
 
 			<li>Clothing</li>
 			<li>
-				<a target="_blank" href="https://vuoriclothing.com/products/ponto-performance-crew-azure-heather?queryId=null&index=null&objectId=4761818431591">Sunday Performance Joggers - M, Beryl Heather</a>
+				<a target="_blank" href="https://www.marinelayer.com/products/sherpa-overshirt-natural">Sherpa Overshirt - M, Natural</a>
 			</li>
 			<li>
-				<a target="_blank" href="https://www.birddogs.com/products/gabe-ruths">Bird Dog Joggers - M, Any color but black</a>
+				<a target="_blank" href="https://www.pakaapparel.com/products/alpaca-crew?variant=32958002626644">The Original Crew - M, Sky Blue</a>
 			</li>
 			<li>
 				<a target="_blank" href="https://vuoriclothing.com/products/ponto-performance-crew-azure-heather?queryId=null&index=null&objectId=4761818431591">Ponto Performance Crew</a>
 			</li>
 			<li>
-				<a target="_blank" href="https://ombraz.com/products/classics-ombraz-armless-sunglasses?variant=43556964401403">Ombraz Sunglasses</a>
-			</li>
-			<li>
-				<a target="_blank" href="https://www.47brand.com/products/boston-celtics-grit-scrum-t-mens">Boston Celtics Tee</a>
-			</li>
-			<li>
-				<a target="_blank" href="https://fahertybrand.com/products/cloud-ls-henley-ivory-heather-1?variant=39452970778693">Cloud Cotton Long-Sleeve Henley (wait for sale)</a>
-			</li>
-			<li>
-				<a target="_blank" href="https://fahertybrand.com/products/inlet-knit-blazer-black-sky-melange?variant=40449381400645">Inlet Knit Blazer - M (wait for sale)</a>
+				<a target="_blank" href="https://www.taylorstitch.com/collections/the-apres-pant/products/apres-pant-in-natural-sashiko-2210">The Après Pant in Natural Sashiko - M</a>
 			</li>
 			
+			
 			<li>Shoes</li>
+			<li>
+				<a target="_blank" href="https://olukai.com/products/laeahi-li-ili-mens-leather-sneakers-kukui-brown?variant=40444401582179">Lae‘ahi Lī ‘Ili - Kukui Brown, 10</a>
+			</li>
 			<li>
 				<a target="_blank" href="https://nisolo.com/collections/mens-oxfords/products/mens-leather-slip-on-tobacco">Alejandro Slip On - Tobacco, 10</a>
 			</li>
