--- a/wishlist/index.html
+++ b/wishlist/index.html
@@ -27,16 +27,13 @@ title: Wishlist
 				<a target="_blank" href="https://vuoriclothing.com/products/ponto-performance-crew-azure-heather?queryId=null&index=null&objectId=4761818431591">Ponto Performance Crew</a>
 			</li>
 			<li>
-				<a target="_blank" href="https://www.taylorstitch.com/collections/the-apres-pant/products/apres-pant-in-natural-sashiko-2210">The Après Pant in Natural Sashiko - M</a>
+				<a target="_blank" href="https://www.taylorstitch.com/collections/the-apres-pant/products/apres-pant-in-natural-sashiko-2210">The Après Pant in Natural Sashiko or Black Cherry Sashiko - M</a>
 			</li>
 			
 			
 			<li>Shoes</li>
 			<li>
-				<a target="_blank" href="https://olukai.com/products/laeahi-li-ili-mens-leather-sneakers-kukui-brown?variant=40444401582179">Lae‘ahi Lī ‘Ili - Kukui Brown, 10</a>
-			</li>
-			<li>
-				<a target="_blank" href="https://nisolo.com/collections/mens-oxfords/products/mens-leather-slip-on-tobacco">Alejandro Slip On - Tobacco, 10</a>
+				<a target="_blank" href="https://www.sabah.am/products/fort-worth-brown-sabah-men">Fort Worth Brown, Men 42</a>
 			</li>
 			
 			<li>Expensive</li>
