--- a/wishlist/index.html
+++ b/wishlist/index.html
@@ -27,13 +27,7 @@ title: Wishlist
 				<a target="_blank" href="https://vuoriclothing.com/products/ponto-performance-crew-azure-heather?queryId=null&index=null&objectId=4761818431591">Ponto Performance Crew</a>
 			</li>
 			<li>
-				<a target="_blank" href="https://www.taylorstitch.com/collections/the-apres-pant/products/apres-pant-in-natural-sashiko-2210">The Après Pant in Natural Sashiko or Black Cherry Sashiko - M</a>
-			</li>
-			
-			
-			<li>Shoes</li>
-			<li>
-				<a target="_blank" href="https://www.sabah.am/products/fort-worth-brown-sabah-men">Fort Worth Brown, Men 42</a>
+				<a target="_blank" href="https://bigblanket.com/products/hideout-hoodie?variant=40542245486628">Hideout Hoodie</a>
 			</li>
 			
 			<li>Expensive</li>
