--- a/wishlist/index.html
+++ b/wishlist/index.html
@@ -32,6 +32,7 @@ title: Wishlist
 			
 			<li>Expensive</li>
 			<li>
+				<a target="_blank" href="https://www.lovesac.com/sacs/build/pillowsac-insert-and-cover-dove-channeled-phur">LoveSac Chair</a>
 				<a target="_blank" href="https://www.solostove.com/en-us/p/station?sku=STN-BLK">Solo Stove Station</a>
 			</li>
 		</ul>
