--- a/wishlist/index.html
+++ b/wishlist/index.html
@@ -18,22 +18,18 @@ title: Wishlist
 
 			<li>Clothing</li>
 			<li>
-				<a target="_blank" href="https://www.marinelayer.com/products/sherpa-overshirt-natural">Sherpa Overshirt - M, Natural</a>
+				<a target="_blank" href="https://www.pakaapparel.com/products/alpaca-crew?variant=32958002626644">The Original Crew - M, Sky Blue</a>
 			</li>
 			<li>
-				<a target="_blank" href="https://www.pakaapparel.com/products/alpaca-crew?variant=32958002626644">The Original Crew - M, Sky Blue</a>
+				<a target="_blank" href="https://www.birddogs.com/products/vance-armstrongs">Birddog Joggers - M (most likely out of stock)</a>
 			</li>
 			<li>
 				<a target="_blank" href="https://vuoriclothing.com/products/ponto-performance-crew-azure-heather?queryId=null&index=null&objectId=4761818431591">Ponto Performance Crew</a>
 			</li>
-			<li>
-				<a target="_blank" href="https://bigblanket.com/products/hideout-hoodie?variant=40542245486628">Hideout Hoodie</a>
-			</li>
 			
-			<li>Expensive</li>
+			<li>Crazy Expensive Gadgets</li>
 			<li>
-				<a target="_blank" href="https://www.lovesac.com/sacs/build/pillowsac-insert-and-cover-dove-channeled-phur">LoveSac Chair</a>
-				<a target="_blank" href="https://www.solostove.com/en-us/p/station?sku=STN-BLK">Solo Stove Station</a>
+				<a target="_blank" href="https://www.amazon.com/hz/wishlist/ls/39EYZFNHH2QIB/ref=nav_wishlist_lists_2">Expensive Gadgets Wishlist</a>
 			</li>
 		</ul>
 	</div>
