--- a/wishlist/index.html
+++ b/wishlist/index.html
@@ -16,6 +16,11 @@ title: Wishlist
 				<a target="_blank" href="https://www.amazon.com/hz/wishlist/ls/ZJL4JDNBYM4S/ref=nav_wishlist_lists_1">Amazon Wishlist</a>
 			</li>
 
+			<li>Cooking</li>
+			<li>
+				<a target="_blank" href="https://madeincookware.com/products/stainless-steel-frying-pan/set">Stainless Clad Frying Pan</a>
+			</li>
+
 			<li>Clothing</li>
 			<li>
 				<a target="_blank" href="https://www.pakaapparel.com/products/alpaca-crew?variant=32958002626644">The Original Crew - M, Sky Blue</a>
