--- a/wishlist/index.html
+++ b/wishlist/index.html
@@ -16,6 +16,11 @@ title: Wishlist
 				<a target="_blank" href="https://www.amazon.com/hz/wishlist/ls/ZJL4JDNBYM4S/ref=nav_wishlist_lists_1">Amazon Wishlist</a>
 			</li>
 
+			<li>Golf</li>
+			<li>
+				<a target="_blank" href="https://www.callawaygolf.com/golf-clubs/wedges/wedges-2022-jaws-raw-chrome.html">Jaws Raw Face Chrome Wedge - Lob wedge 58 degree, Graphite shaft</a>
+			</li>			
+
 			<li>Cooking</li>
 			<li>
 				<a target="_blank" href="https://madeincookware.com/products/stainless-steel-frying-pan/set">Stainless Clad Frying Pan</a>
