--- a/wishlist/index.html
+++ b/wishlist/index.html
@@ -41,6 +41,11 @@ title: Wishlist
 			<li>
 				<a target="_blank" href="https://www.amazon.com/hz/wishlist/ls/39EYZFNHH2QIB/ref=nav_wishlist_lists_2">Expensive Gadgets Wishlist</a>
 			</li>
+
+			<li>Aiden's 529 Gift</li>
+			<li>
+				<a target="_blank" href="https://www.ugift529.com/">Use uGift code: S86-563</a>
+			</li>
 		</ul>
 	</div>
 </div>
