--- a/wishlist/index.html
+++ b/wishlist/index.html
@@ -34,7 +34,7 @@ title: Wishlist
 				<a target="_blank" href="https://www.birddogs.com/products/vance-armstrongs">Birddog Joggers - M (most likely out of stock)</a>
 			</li>
 			<li>
-				<a target="_blank" href="https://vuoriclothing.com/products/ponto-performance-crew-azure-heather?queryId=null&index=null&objectId=4761818431591">Ponto Performance Crew</a>
+				<a target="_blank" href="https://vuoriclothing.com/products/ponto-performance-crew-nautilus-heather?queryId=null&index=null">Ponto Performance Crew</a>
 			</li>
 			
 			<li>Crazy Expensive Gadgets</li>
