--- a/wishlist/index.html
+++ b/wishlist/index.html
@@ -4,46 +4,62 @@ overview: true
 title: Wishlist
 ---
 
-<div class="row">
-	<div class="col s12 center-align">
-		<h1 class="page-title">Wishlist</h1>
-	</div>
+<div class="wishlist-page">
+	<h1 class="wishlist-title">Wishlist</h1>
 
-	<div class="wishlist" class="col s12">
-		<ul>
-			<li>Amazon</li>
-			<li>
-				<a target="_blank" href="https://www.amazon.com/hz/wishlist/ls/ZJL4JDNBYM4S/ref=nav_wishlist_lists_1">Amazon Wishlist</a>
-			</li>
+	<div class="wishlist-sections">
+		<div class="wishlist-section">
+			<h3>Amazon</h3>
+			<ul>
+				<li>
+					<a target="_blank" href="https://www.amazon.com/hz/wishlist/ls/ZJL4JDNBYM4S/ref=nav_wishlist_lists_1">Amazon Wishlist</a>
+				</li>
+			</ul>
+		</div>
 
-			<li>Golf</li>
-			<li>
-				<a target="_blank" href="https://www.callawaygolf.com/golf-clubs/wedges/wedges-2022-jaws-raw-chrome.html">Jaws Raw Face Chrome Wedge - Lob wedge 58 degree, Graphite shaft</a>
-			</li>			
+		<div class="wishlist-section">
+			<h3>Golf</h3>
+			<ul>
+				<li>
+					<a target="_blank" href="https://www.callawaygolf.com/golf-clubs/wedges/wedges-2022-jaws-raw-chrome.html">Jaws Raw Face Chrome Wedge - Lob wedge 58 degree, Graphite shaft</a>
+				</li>
+			</ul>
+		</div>
 
-			<li>Clothing</li>
-			<li>
-				<a target="_blank" href="https://vuoriclothing.com/products/ponto-performance-crew-nautilus-heather">Ponto Performance Crew</a>
-			</li>
-			<li>
-				<a target="_blank" href="https://vuoriclothing.com/products/long-sleeve-strato-tech-tee-chambray-heather">Long-Sleeve Strato Tech Tee</a>
-			</li>
-			<li>
-				<a target="_blank" href="https://www.pakaapparel.com/products/alpaca-crew?variant=32958002626644">The Original Crew - M, Sky Blue</a>
-			</li>
-			<li>
-				<a target="_blank" href="https://www.birddogs.com/products/vance-armstrongs">Birddog Joggers - M (most likely out of stock)</a>
-			</li>
-			
-			<li>Crazy Expensive Gadgets</li>
-			<li>
-				<a target="_blank" href="https://www.amazon.com/hz/wishlist/ls/39EYZFNHH2QIB/ref=nav_wishlist_lists_2">Expensive Gadgets Wishlist</a>
-			</li>
+		<div class="wishlist-section">
+			<h3>Clothing</h3>
+			<ul>
+				<li>
+					<a target="_blank" href="https://vuoriclothing.com/products/ponto-performance-crew-nautilus-heather">Ponto Performance Crew</a>
+				</li>
+				<li>
+					<a target="_blank" href="https://vuoriclothing.com/products/long-sleeve-strato-tech-tee-chambray-heather">Long-Sleeve Strato Tech Tee</a>
+				</li>
+				<li>
+					<a target="_blank" href="https://www.pakaapparel.com/products/alpaca-crew?variant=32958002626644">The Original Crew - M, Sky Blue</a>
+				</li>
+				<li>
+					<a target="_blank" href="https://www.birddogs.com/products/vance-armstrongs">Birddog Joggers - M (most likely out of stock)</a>
+				</li>
+			</ul>
+		</div>
 
-			<li>Aiden's 529 Gift</li>
-			<li>
-				<a target="_blank" href="https://www.ugift529.com/">Use uGift code: S86-563</a>
-			</li>
-		</ul>
+		<div class="wishlist-section">
+			<h3>Crazy Expensive Gadgets</h3>
+			<ul>
+				<li>
+					<a target="_blank" href="https://www.amazon.com/hz/wishlist/ls/39EYZFNHH2QIB/ref=nav_wishlist_lists_2">Expensive Gadgets Wishlist</a>
+				</li>
+			</ul>
+		</div>
+
+		<div class="wishlist-section">
+			<h3>Aiden's 529 Gift</h3>
+			<ul>
+				<li>
+					<a target="_blank" href="https://www.ugift529.com/">Use uGift code: S86-563</a>
+				</li>
+			</ul>
+		</div>
 	</div>
 </div>
