adjust content to new homepage

--- a/index.html
+++ b/index.html
@@ -1,13 +1,75 @@
 ---
 layout: default
 overview: true
-title: Payments & POS Specialist
+title: Sam Griffin - Payments & POS Specialist
 ---
 
-<div class="homepage row">
-	<div class="col s12 center-align">
-		<h1>Sam Griffin</h1>
-		<h2>Payments & POS Specialist</h2>
+<div class="homepage">
+	<!-- Hero Section -->
+	<div class="hero-section row">
+		<div class="col s12 l5 center-align">
+			<div class="profile-image">
+				<img src="/images/headshot.jpg" alt="Sam Griffin" class="circle responsive-img" />
+			</div>
+		</div>
+		<div class="col s12 l7">
+			<div class="hero-content">
+				<h1>Sam Griffin</h1>
+				<h2>SVP of Engineering at CardFree</h2>
+				<div class="about-content">
+					{% include about-me.html %}
+				</div>
+				<div class="social-icons-horizontal">
+					<a class="social-icon linkedin" href="https://www.linkedin.com/in/sam-griffin-89b23014/" target="_blank">
+						<i class="fa fa-linkedin"></i>
+					</a>
+					<a class="social-icon twitter" href="https://twitter.com/flannelchannel3" target="_blank">
+						<i class="fa fa-twitter"></i>
+					</a>
+					<a class="social-icon instagram" href="https://www.instagram.com/samjgriffin3/" target="_blank">
+						<i class="fa fa-instagram"></i>
+					</a>
+					<a class="social-icon github" href="https://github.com/samjgriffin89" target="_blank">
+						<i class="fa fa-github"></i>
+					</a>
+				</div>
+			</div>
+		</div>
+	</div>
+	
+	<!-- Quick Links Section -->
+	<div class="quick-links row">
+		<div class="col s12">
+			<div class="links-grid">
+				<a href="/foodpics" class="link-card">
+					<div class="card hoverable">
+						<div class="card-content center-align">
+							<i class="material-icons large">restaurant</i>
+							<h5>Food Pics</h5>
+							<p>Culinary adventures and recipes</p>
+						</div>
+					</div>
+				</a>
+				<a href="/dev-posts" class="link-card">
+					<div class="card hoverable">
+						<div class="card-content center-align">
+							<i class="material-icons large">code</i>
+							<h5>Tech & Coding</h5>
+							<p>Development insights and tutorials</p>
+						</div>
+					</div>
+				</a>
+				<a href="https://github.com/samjgriffin89" target="_blank" class="link-card">
+					<div class="card hoverable">
+						<div class="card-content center-align">
+							<i class="material-icons large">work</i>
+							<h5>Projects</h5>
+							<p>Open source contributions</p>
+						</div>
+					</div>
+				</a>
+			</div>
+		</div>
 	</div>
 </div>
 
